# zia_programming

./: .gitignore  Cargo.toml  Makefile.toml  README.md  docker-compose.nvim.yml  docker-compose.yml  rustfmt.toml
.github/workflows/: main.yml  release.yml  website.yml
.vim/: coc-settings.json
izia/: Cargo.toml  README.md
izia/src/: main.rs
nvim/: Dockerfile  init.lua  init.vim
presentations/: Cargo.toml
presentations/src/: main.rs
test_zia/: Cargo.toml
test_zia/src/: lib.rs
zia/: Cargo.toml  README.md
zia-lang.org/: LICENSE  README.md  package.json
zia-lang.org/configs/: tailwind.config.js  tsconfig.json  webpack.config.js  webpack.css_classes.config.js
zia-lang.org/crate/: Cargo.toml  rustfmt.toml  webdriver.json
zia-lang.org/crate/src/: lib.rs
zia-lang.org/crate/src/page/: home.rs  mod.rs  not_found.rs
zia-lang.org/crate/src/page/home/: command_input.rs  history.rs  menu.rs  mod.rs  tutorials.rs
zia-lang.org/crate/src/page/partial/: footer.rs  header.rs
zia-lang.org/crate/tests/: test.rs
zia-lang.org/css/: custom.css
zia-lang.org/entries/templates/: favicons.hbs  loading_page.hbs  social_media.hbs
zia-lang.org/favicons/: browserconfig.xml  site.webmanifest
zia/benches/: let_reduction.rs  setup.rs
zia/proptest-regressions/: adding.txt  context.txt
zia/src/: adding.rs  and_also.rs  associativity.rs  consistent_merge.rs  constants.rs  context.rs  context_cache.rs  context_delta.rs  context_search.rs  context_search_test.rs  context_snap_shot.rs  context_updater.rs  delta.rs  errors.rs  iteration.rs  lexer.rs  lib.rs  logging.rs  map_err_variant.rs  mixed_concept.rs  mock_snap_shot.rs  multi_threaded.rs  nester.rs  parser.rs  reduction_reason.rs  removing.rs  single_threaded.rs  snap_shot.rs  substitute.rs  translating.rs  variable_mask_list.rs  writing.rs
zia/src/ast/: macro.rs  mod.rs  node.rs  trait.rs
zia/src/concepts/: abstract_part.rs  common_part.rs  mod.rs  trait.rs
zia/src/context_cache/: macro.rs  mod.rs  trait.rs
zia/src/context_search_test/: basic_comparison.rs  basic_composition.rs  basic_existence.rs  basic_inference.rs  basic_precedence.rs  basic_reduction.rs  basic_rule.rs  comparison_existence_implication_rule.rs  existence_inference_rule.rs  implied_reduction_via_implication_chain.rs  inference_rule.rs  inferred_negation.rs  mod.rs  nested_composition_rule.rs  not.rs
zia/src/context_snap_shot/: concept.rs  concept_id.rs  mod.rs
zia/src/context_test/: basic_precedence.rs  infered_precedence.rs  mod.rs
zia/src/reading/: concepts.rs  mod.rs  syntax.rs
zia/tests/: definitions.proptest-regressions  definitions.rs  definitions_and_reductions.proptest-regressions  definitions_and_reductions.rs  exists_such_that.rs  implication.rs  lexer.proptest-regressions  lexer.rs  precedence.proptest-regressions  precedence.rs  program_recognition.proptest-regressions  program_recognition.rs  reductions.proptest-regressions  reductions.rs  syntax.proptest-regressions  syntax.rs  variables.proptest-regressions  variables.rs
zia/tests/test_zia/: Cargo.toml
zia/tests/test_zia/src/: lib.rs
