[package]
name = "izia"
version = "0.2.0"
authors = ["Charles Johnson <charlesthomasjohnson0@gmail.com>"]
description = "Interactive Shell for the Zia Programming Language"
repository = "https://github.com/Charles-Johnson/zia_programming"
readme = "README.md"
keywords = ["interpreted", "language-programming", "tacit", "homoiconic", "symbolic"]
categories = ["science", "internationalization", "compression", "command-line-utilities"]
license = "GPL-3.0"

[badges]
maintenance = {status = "actively-developed"}

[dependencies]
zia = { path = "../zia", version = "0"}
linefeed = "0.5.3"
