[package]
name = "test_zia"
version = "0.5.0"
authors = ["Charles Johnson <charlesthomasjohnson0@gmail.com>"]
description = "Test Library for the Zia Programming Language"
repository = "https://github.com/Charles-Johnson/zia_programming"
license = "GPL-3.0"

[badges]
maintenance = {status = "actively-developed"}

[lib]
name = "test_zia"
crate-type = ["lib"]

[dependencies]
proptest = "0.9.1"
lazy_static = "1.2.0"
