[package]
name = "zia"
version = "0.5.0"
authors = ["Charles Johnson <charlesthomasjohnson0@gmail.com>"]
description = "Interpreter Library for the Zia Programming Language"
repository = "https://github.com/Charles-Johnson/zia_programming"
readme = "README.md"
keywords = ["interpreter", "language-programming", "tacit", "symbolic"]
categories = ["science", "parser-implementations", "internationalization", "compression"]
license = "GPL-3.0"
edition="2018"

[badges]
maintenance = {status = "actively-developed"}


[lib]
name = "zia"
crate-type = ["lib"]
path = "src/lib.rs"

[dependencies]
assert_matches = "1.5"
bimap = "0.5"
dashmap = "3.5.0"
generic-array = "0.14.4"
lazy_static = "1.2.0"
maplit = "1.0.2"
rayon = "1.3.0"
snafu = "0.5.0"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
slog = { version="2.4.1", features=["max_level_info", "release_max_level_warn"]}
slog-term = "2.4.0"
simple_logger = "1.6.0"


[dev-dependencies]
test_zia = {path="../test_zia", version="0.5.0"}
proptest = "0.9.1"
