[package]
name = "zia"
version = "0.5.0"
authors = ["Charles Johnson <charlesthomasjohnson0@gmail.com>"]
description = "Interpreter Library for the Zia Programming Language"
repository = "https://github.com/Charles-Johnson/zia_programming"
readme = "README.md"
keywords = ["interpreter", "language-programming", "tacit", "symbolic"]
categories = ["science", "parser-implementations", "internationalization", "compression"]
license = "GPL-3.0"
edition="2018"

[badges]
maintenance = {status = "actively-developed"}


[lib]
name = "zia"
crate-type = ["lib"]
path = "src/lib.rs"

[dependencies]
bimap = "0.5"
dashmap = "3.5.0"
lazy_static = "1.2.0"
maplit = "1.0.2"
rayon = "1.3.0"
thiserror = "1"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
slotmap = "1.0.6"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
simple_logger = "1.15.0"


[dev-dependencies]
proptest = "0.9.1"
