[package]
version = "0.1.0"
name = "webzia"
repository = "https://github.com/Charles-Johnson/zia_programming"
authors = ["Charles Johnson <charlesthomasjohnson0@gmail.com>, Martin Kavík <martin@kavik.cz>"]
description = "Website to demonstrate Zia programming"
categories = ["wasm", "rust", "tailwindcss", "seed", "website"]
license = "MIT"
readme = "./README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "^0.3.5"

[dependencies]
zia = { path = "../../zia", version = "0.5.0"}
wasm-bindgen = "^0.2.55" # sync with `wasm-bindgen-test`
seed = "0.5.0"
fixed-vec-deque = "0.1.8"
console_error_panic_hook = "0.1.6"

[dependencies.web-sys]
version = "^0.3.32"
features = [
  "ScrollToOptions",
  "Navigator",
  "KeyboardEvent",
]

[profile.release]
lto = true
opt-level = 's'
