[package]
version = "0.1.0"
name = "webzia"
repository = "https://github.com/Charles-Johnson/zia_programming"
authors = ["Charles Johnson <charlesthomasjohnson0@gmail.com>, Martin Kavík <martin@kavik.cz>"]
description = "Website to demonstrate Zia programming"
categories = ["wasm", "rust", "tailwindcss", "seed", "website"]
license = "MIT"
readme = "./README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "^0.3.18"

[dependencies]
zia = { path = "../../zia", version = "0.5.0"}
seed = "0.8.0"
fixed-vec-deque = "0.1.9"
console_error_panic_hook = "0.1.7"

[dependencies.web-sys]
version = "^0.3.45"
features = [
  "ScrollToOptions",
  "Navigator",
  "KeyboardEvent",
]

[profile.release]
lto = true
opt-level = 's'
